--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <style>
       html,
-      body,
-      #demo {
+      body {
         background: #fafafa;
         margin: 0;
         width: 100%;
@@ -13,14 +12,29 @@
         display: flex;
         font-family: Arial, Helvetica, sans-serif;
       }
+
+      .block {
+        margin: 8px;
+      }
     </style>
   </head>
   <body>
     <holochain-playground-container id="container">
       <div style="display: flex; flex: 1; flex-direction: column">
-        <dna-code id="demo"></dna-code>
-        <call-zome-fns style="height: 200px"></call-zome-fns>
-        <entry-graph style="height: 200px"></entry-graph>
+        <div style="display: flex; flex: 1; flex-direction: row">
+          <dna-code id="demo" class="block" style="flex: 1"></dna-code>
+          <div style="display: flex; flex-basis: 400px; flex-direction: column">
+            <select-active-dna class="block"></select-active-dna>
+            <dht-cells class="block" style="flex: 1"></dht-cells>
+          </div>
+        </div>
+        <div style="display: flex; flex-basis: 400px; flex-direction: row">
+          <call-zome-fns
+            style="flex-basis: 400px"
+            class="block"
+          ></call-zome-fns>
+          <entry-graph style="flex: 1" class="block"></entry-graph>
+        </div>
       </div>
     </holochain-playground-container>
 
@@ -28,20 +42,25 @@
       import {
         HolochainPlaygroundContainer,
         CallZomeFns,
+        DhtCells,
+        SelectActiveDna,
         EntryGraph,
       } from '@holochain-playground/elements';
-      import { DnaCode, demoBlocklyDna } from '../dist';
+      import { DnaCode, demoBlocklyDna } from './src/index';
 
       customElements.define(
         'holochain-playground-container',
         HolochainPlaygroundContainer
       );
       customElements.define('dna-code', DnaCode);
+      customElements.define('dht-cells', DhtCells);
+      customElements.define('select-active-dna', SelectActiveDna);
       customElements.define('call-zome-fns', CallZomeFns);
       customElements.define('entry-graph', EntryGraph);
 
       const c = document.getElementById('container');
       c.simulatedDnaTemplate = demoBlocklyDna;
+      c.numberOfSimulatedConductors = 6;
 
       c.addEventListener('ready', e => {
         const conductor = e.detail.conductors[0];
