--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         <div style="display: flex; flex: 1; flex-direction: row">
           <dna-code id="demo" class="block" style="flex: 1"></dna-code>
           <div style="display: flex; flex-basis: 400px; flex-direction: column">
-            <select-active-dna class="block"></select-active-dna>
             <dht-cells class="block" style="flex: 1"></dht-cells>
           </div>
         </div>
@@ -39,14 +38,13 @@
     </holochain-playground-container>
 
     <script type="module">
+      import '@webcomponents/scoped-custom-element-registry';
       import {
         HolochainPlaygroundContainer,
         CallZomeFns,
         DhtCells,
-        SelectActiveDna,
-        EntryGraph,
       } from '@holochain-playground/elements';
-      import { DnaCode, demoBlocklyDna } from './src/index';
+      import { DnaCode, demoHapp } from './src/index';
 
       customElements.define(
         'holochain-playground-container',
@@ -54,12 +52,10 @@
       );
       customElements.define('dna-code', DnaCode);
       customElements.define('dht-cells', DhtCells);
-      customElements.define('select-active-dna', SelectActiveDna);
       customElements.define('call-zome-fns', CallZomeFns);
-      customElements.define('entry-graph', EntryGraph);
-
+      
       const c = document.getElementById('container');
-      c.simulatedDnaTemplate = demoBlocklyDna;
+      c.simulatedHapp = demoHapp;
       c.numberOfSimulatedConductors = 6;
 
       c.addEventListener('ready', e => {
